--- a/ems-backend/src/main/resources/application.properties
+++ b/ems-backend/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=ems-backend
+
+server.port = 8033
+server.servlet.context-path=/api
+
+# DB Connection
+spring.datasource.url=jdbc:mysql://localhost:3306/emsdb
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
