--- a/ems-backend/src/main/resources/application.properties
+++ b/ems-backend/src/main/resources/application.properties
@@ -7,6 +7,6 @@ server.servlet.context-path=/api
 spring.datasource.url=jdbc:mysql://localhost:3306/emsdb
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.datasource.username=root
-spring.datasource.password=bintangmada
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
